Remove NotNull annotations from tests (#2885)
Co-authored-by: kermandev <46640204+kermandev@users.noreply.github.com>